--- a/content/comunicat/2016/07.md
+++ b/content/comunicat/2016/07.md
@@ -1,19 +1,19 @@
 +++
 title             = "Comunicat"
-date	 	  = "2016-07-04"
-nombrenoticies    = 3
-nombredestacats   = 2
+date	 	  = "2016-07-06"
+nombrenoticies    = 2
+nombredestacats   = 1
 key 		  = "JULIOL2016"
 
 [[relacionats]]
-doctitle          = "Canigó - Incorporació mòdul d'Administració de logs a aplicació Canigó 3"
-docdescription    = "Aquest HowTo descriu com afegir el mòdul d'Administració de logs a una aplicació Canigó 3"
-docurl            = "/related/canigo/howto/Canigo - Incorporacio modul Administracio de logs a aplicacio Canigo 3.pdf"
+doctitle          = "Canigo - Howto - Contenidor GICAR en entorns de desenvolupament"
+docdescription    = "Aquest HowTo descriu com utilitzar el contenidor Docker de GICAR en entorns de desenvolupaments per aplicacions Canigó 3.1 (REST+HTML5/JS)"
+docurl            = "/related/canigo/howto/Canigo - Howto - Contenidor GICAR en entorns de desenvolupament.pdf"
 doctype           = "PDF"
 
 [grafica]
-titol      = "Total d’aplicacions donades d’alta al SIC"
-descripcio = "La següent gràfica mostra el total d’aplicacions donades d’alta al SIC en data 31/5/2016."
-imatge     = "repositoris_SVN-SIC_Maig2016.PNG"
-alt        = "Total d’aplicacions donades d’alta al SIC"
+titol      = "Peticions al WS de Serveis Invocació d'eFormularis"
+descripcio = "La següent gràfica mostra les peticions per departament realitzades el mes de Juny al WS de Serveis Invocació d'eFormularis:"
+imatge     = "eforms_peticions_dpt.png"
+alt        = "Peticions al WS de Serveis Invocació d'eFormularis"
 +++
