--- a/content/comunicat/2016/07.md
+++ b/content/comunicat/2016/07.md
@@ -12,8 +12,8 @@ docurl            = "/related/canigo/howto/Canigo - Howto - Contenidor GICAR en 
 doctype           = "PDF"
 
 [grafica]
-titol      = "Peticions al WS de Serveis Invocació d'eFormularis"
-descripcio = "La següent gràfica mostra les peticions per departament realitzades el mes de Juny al WS de Serveis Invocació d'eFormularis:"
-imatge     = "eforms_peticions_dpt.png"
-alt        = "Peticions al WS de Serveis Invocació d'eFormularis"
+titol      = "Versions de Canigó per codi de diàleg a les aplicacions del SIC"
+descripcio = "Ús de les versions del framework de canigó en les aplicacions el codi de les quals es troba custodiat al SVN del SIC"
+imatge     = "Us_Framework_Canigo.PNG"
+alt        = "Versions de Canigó per codi de diàleg a les aplicacions del SIC"
 +++
