--- a/content/comunicat/2016/07.md
+++ b/content/comunicat/2016/07.md
@@ -13,7 +13,7 @@ doctype           = "PDF"
 
 [grafica]
 titol      = "Versions de Canigó per codi de diàleg a les aplicacions del SIC"
-descripcio = "Ús de les versions del framework de canigó en les aplicacions el codi de les quals es troba custodiat al SVN del SIC"
+descripcio = "Ús de les versions del framework de Canigó en les aplicacions que tenen el codi custodiat al SVN del SIC"
 imatge     = "Us_Framework_Canigo.PNG"
-alt        = "Versions de Canigó per codi de diàleg a les aplicacions del SIC" 
+alt        = "Versions de Canigó per codi de diàleg a les aplicacions del SIC"
 +++
