--- a/content/comunicat/2016/09.md
+++ b/content/comunicat/2016/09.md
@@ -2,19 +2,19 @@
 title             = "Comunicat"
 date	 	  = "2016-09-06"
 nombrenoticies    = 2
-nombredestacats   = 0
+nombredestacats   = 1
 key 		  = "SETEMBRE2016"
 
 [[relacionats]]
-doctitle          = "Canigo - Howto - Afegir Swagger a una aplicació Canigó Rest 3.1"
+doctitle          = "Canigo - Howto - Swagger a una aplicació Canigó Rest 3.1"
 docdescription    = "Aquest HowTo descriu les passes a realitzar per afegir Swagger a una aplicació Rest Canigó 3.1"
-docurl            = "/related/canigo/howto/Canigo - Howto - Afegir_Swagger_Canigo_3_1.pdf"
+docurl            = "/related/canigo/howto/Canigo - Howto - Swagger_en_aplicacio_Canigo_3_1.pdf"
 doctype           = "PDF"
 
 [grafica]
-titol      = "Evolució de peticions al Servei de Transformació de Documents (STD)"
-descripcio = "Aquest mes de Juliol s'ha superat per primera vegada les 10.000 peticions al servei"
-imatge     = "evolucio_peticions_std.png"
-alt        = "Evolució de peticions al Servei de Transformació de Documents (STD)"
+titol      = "Evolució anual de peticions al SGDE"
+descripcio = "Històricament no ha deixat de crèixer el número de peticions als serveis d'eFormularis i STD"
+imatge     = "sgde.png"
+alt        = "Evolució anual de peticions al SGDE"
 
 +++
