--- a/content/comunicat/2016/09.md
+++ b/content/comunicat/2016/09.md
@@ -6,8 +6,8 @@ nombredestacats   = 1
 key 		  = "SETEMBRE2016"
 
 [[relacionats]]
-doctitle          = "Canigo - Howto - Swagger a una aplicació Canigó Rest 3.1"
-docdescription    = "Aquest HowTo descriu les passes a realitzar per afegir Swagger a una aplicació Rest Canigó 3.1"
+doctitle          = "Canigo - Howto - Swagger a una aplicació Canigó 3.1"
+docdescription    = "Aquest HowTo descriu les passes a realitzar per afegir Swagger a una aplicació Canigó 3.1 amb arquitectura REST+HTML5/JS"
 docurl            = "/related/canigo/howto/Canigo - Howto - Swagger_en_aplicacio_Canigo_3_1.pdf"
 doctype           = "PDF"
 
