--- a/content/comunicat/2016/10.md
+++ b/content/comunicat/2016/10.md
@@ -14,9 +14,9 @@ imatge     = "sgde.png"
 alt        = "Evolució de peticions a eFormularis"
 
 [[relacionats]]
-doctitle          = "Afegir Spring Batch a una aplicació Canigó"
-docdescription    = "How To de com afegir Spring Batch a una aplicació Canigó"
-docurl            = "/howtos/2016-09-Howto-Canigo-Spring-Batch/"
+doctitle          = "Spring Batch a una aplicació Canigó"
+docdescription    = "How To per afegir Spring Batch a una aplicació Canigó 3.1"
+docurl            = "/howtos/2016-10-Howto-Canigo-Spring-Batch/"
 doctype           = "HTML"
 
 +++
