--- a/content/comunicat/2016/10.md
+++ b/content/comunicat/2016/10.md
@@ -8,8 +8,8 @@ key 		  		= "OCTUBRE2016"
 
 
 [grafica]
-titol      = "Evolució de peticions a eFormularis"
-descripcio = "Evolució del número de peticions als serveis de eFormularis (SGDE)"
+titol      = "SGDE. Evolució de peticions a eFormularis"
+descripcio = "Evolució del número de peticions al servei de Formularis Adobe des del 2015"
 imatge     = "sgde.png"
 alt        = "Evolució de peticions a eFormularis"
 
