--- a/content/comunicat/2016/11.md
+++ b/content/comunicat/2016/11.md
@@ -14,8 +14,8 @@ imatge     = "sgde.png"
 alt        = "Evolució de peticions a eFormularis"
 
 [[relacionats]]
-doctitle          = "Gestió global d'errors a una aplicació Canigó"
-docdescription    = "En aquest HowTo s’explica com gestionar els errors utilitzant @ControllerAdvice a una aplicació Canigó Canigó 3.1 REST."
+doctitle          = "Gestió d'errors a una aplicació Canigó 3.1"
+docdescription    = "En aquest HowTo s’explica com gestionar els errors utilitzant l'anotació @ControllerAdvice a una aplicació Canigó 3.1 (REST/HTML5+JS)"
 docurl            = "/howtos/2016-10-Howto-Canigo-Gestio-Errors-Globals/"
 doctype           = "HTML"
 
