--- a/content/comunicat/2017/01.md
+++ b/content/comunicat/2017/01.md
@@ -8,15 +8,9 @@ key 		  		= "GENER2017"
 
 
 [grafica]
-titol      = "SGDE. Evolució de peticions a STD"
-descripcio = "Evolució del número de peticions al servei de STD dels darrers 2 anys"
+titol      = "SGDE. EvoluciÃ³ de peticions a STD"
+descripcio = "EvoluciÃ³ del nÃºmero de peticions al servei de STD del darrer any"
 imatge     = "evolucio_peticions_std.png"
-alt        = "Evolució de peticions a STD"
-
-[[relacionats]]
-doctitle          = "Autenticació amb JWT a una aplicació Canigó 3.1"
-docdescription    = "En aquest HowTo s’explica com autenticar una aplicació Canigó 3.1 (REST+HTML5/JS) amb JWT"
-docurl            = "/howtos/2016-11-Howto-Canigo-JWT/"
-doctype           = "HTML"
+alt        = "EvoluciÃ³ de peticions a STD"
 
 +++
