--- a/content/comunicat/2017/03.md
+++ b/content/comunicat/2017/03.md
@@ -7,14 +7,14 @@ key 		  		= "MARC2017"
 
 
 [grafica]
-titol      = "SGDE. Evolució del número de consultes al servei STD."
-descripcio = "S'observa un creixement en augment de peticions al servei STD"
+titol      = "SGDE. Evolució del número de peticions al servei STD"
+descripcio = "Segueix el creixement peticions al servei STD"
 imatge     = "evolucio_consultes_STD.png"
-alt        = "Evolució del número de consultes al servei STD."
+alt        = "Evolució del número de peticions al servei STD."
 
 [[relacionats]]
-doctitle          = "Securitzar la connexió amb Elastic Search"
-docdescription    = "En aquest HowTo s’explica com utilitzar un Proxy per connectar a un ElasticSearch securitzat."
+doctitle          = "Securitzar accés a Elasticsearch OSS a cloud públic"
+docdescription    = "En aquest HowTo s’explica com utilitzar un proxy per securitzar la connexió a un Elasticsearch versió open source"
 docurl            = "/howtos/2017-03-Securitzar_ElasticSearch_Apache/"
 doctype           = "HTML"
 
