--- a/content/comunicat/2017/03.md
+++ b/content/comunicat/2017/03.md
@@ -8,7 +8,7 @@ key 		  		= "MARC2017"
 
 [grafica]
 titol      = "SGDE. Evolució del número de peticions al servei STD"
-descripcio = "Segueix el creixement peticions al servei STD"
+descripcio = "Segueix el creixement continu de peticions al servei STD"
 imatge     = "evolucio_consultes_STD.png"
 alt        = "Evolució del número de peticions al servei STD."
 
