--- a/content/comunicat/2017/04.md
+++ b/content/comunicat/2017/04.md
@@ -5,17 +5,16 @@ nombrenoticies   	= 2
 nombredestacats   	= 1
 key 		  		= "ABRIL2017"
 
-
 [grafica]
-titol      = "SGDE. Evolució del número de peticions al servei STD"
-descripcio = "Segueix el creixement continu de peticions al servei STD"
-imatge     = "evolucio_consultes_STD.png"
-alt        = "Evolució del número de peticions al servei STD."
+titol      = "SGDE. Evolució del número de peticions per mètode al servei STD"
+descripcio = "Segueix el creixement continu de peticions al servei STD, sobretot pel que fa a les involucrades en la realització de còpies autèntiques de documents"
+imatge     = "evolucio_peticions_metode_STD.png"
+alt        = "Evolució del número de peticions per mètode al servei STD"
 
 [[relacionats]]
-doctitle          = "Securitzar accés a Elasticsearch OSS a cloud públic"
-docdescription    = "En aquest HowTo s’explica com utilitzar un proxy per securitzar la connexió a un Elasticsearch versió open source"
-docurl            = "/howtos/2017-03-Securitzar_ElasticSearch_Apache/"
+doctitle          = "Inserció/actualització massiva de dades a una aplicació Canigó 3.2"
+docdescription    = "En aquest HowTo s’explica com fer insercions i actualitzacions massives de dades de forma òptima en una aplicació Canigó 3.2"
+docurl            = "howtos/2017-03-Howto-SaveBatch-Canigo32"
 doctype           = "HTML"
 
 +++
