--- a/content/comunicat/2017/04.md
+++ b/content/comunicat/2017/04.md
@@ -13,7 +13,7 @@ alt        = "Evolució del número de peticions per mètode al servei STD"
 
 [[relacionats]]
 doctitle          = "Inserció/actualització massiva de dades a una aplicació Canigó 3.2"
-docdescription    = "En aquest HowTo s’explica com fer insercions i actualitzacions massives de dades de forma òptima en una aplicació Canigó 3.2"
+docdescription    = "En aquest HowTo s’explica com fer insercions i actualitzacions massives de dades de forma òptima en una aplicació Canigó 3.2."
 docurl            = "howtos/2017-03-Howto-SaveBatch-Canigo32"
 doctype           = "HTML"
 
