Correcció al text a "docdescription"

--- a/content/comunicat/2017/05.md
+++ b/content/comunicat/2017/05.md
@@ -13,7 +13,7 @@ alt        = "PENDENT"
 
 [[relacionats]]
 doctitle          = "Accés a cluster MongoDB per SSL des d'aplicacions NodeJS"
-docdescription    = "En aquest HowTo s’explica com accedir a clusters MongoDB per SSL des d'aplicacions NodeJS. Els clusters MongoDB que s'aprovisionen a cloud públic requereixen aquest accés segur i amb diferents paquets de NodeJS, com "mongodb" i "mongoose", és possible fer-ho"
+docdescription    = "En aquest HowTo s’explica com accedir a clusters MongoDB per SSL des d'aplicacions NodeJS. Els clusters MongoDB que s'aprovisionen a cloud públic requereixen aquest accés segur i amb diferents paquets de NodeJS, com 'mongodb' i 'mongoose', és possible fer-ho"
 docurl            = "PENDENT"
 doctype           = "HTML"
 
