--- a/content/comunicat/2017/05.md
+++ b/content/comunicat/2017/05.md
@@ -6,10 +6,10 @@ nombredestacats   	= 1
 key 		  		= "MAIG2017"
 
 [grafica]
-titol      = "PENDENT"
-descripcio = "PENDENT"
-imatge     = "PENDENT"
-alt        = "PENDENT"
+titol      = "SGDE. Evolució del número de peticions per mètode al servei eFormularis"
+descripcio = "Evolució del número de peticions per mètode al servei eFormularis"
+imatge     = "evolucio_peticions_eformularis_per_metode.png"
+alt        = "Evolució del número de peticions per mètode al servei eFormularis"
 
 [[relacionats]]
 doctitle          = "Accés a cluster MongoDB per SSL des d'aplicacions NodeJS"
