--- a/content/comunicat/2017/05.md
+++ b/content/comunicat/2017/05.md
@@ -14,7 +14,7 @@ alt        = "Evolució del número de peticions per mètode al servei eFormular
 [[relacionats]]
 doctitle          = "Accés a cluster MongoDB per SSL des d'aplicacions NodeJS"
 docdescription    = "En aquest HowTo s’explica com accedir a clusters MongoDB per SSL des d'aplicacions NodeJS. Els clusters MongoDB que s'aprovisionen a cloud públic requereixen aquest accés segur i amb diferents paquets de NodeJS, com 'mongodb' i 'mongoose', és possible fer-ho"
-docurl            = "PENDENT"
+docurl            = "/howtos/2017-05-Howto-Connectar_nodejs_amb_mongo_ssl/"
 doctype           = "HTML"
 
 +++
