--- a/content/comunicat/2017/05.md
+++ b/content/comunicat/2017/05.md
@@ -6,8 +6,8 @@ nombredestacats   	= 1
 key 		  		= "MAIG2017"
 
 [grafica]
-titol      = "SGDE. Evolució del número de peticions per mètode al servei eFormularis"
-descripcio = "En aquest gràfic es mostra l'evolució del número de peticions dels mètodes més emprats al servei eFormularis"
+titol      = "SGDE. Evolució del nombre de peticions per mètode al servei eFormularis"
+descripcio = "En aquest gràfic es mostra l'evolució en l'ús dels mètodes més emprats al servei eFormularis: renderització, extracció i aplanat"
 imatge     = "evolucio_peticions_eformularis_per_metode.png"
 alt        = "Evolució del número de peticions per mètode al servei eFormularis"
 
