--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -2,8 +2,9 @@
 date        = "2017-06-07"
 title       = "SIC. Llançament del SIC 2.0"
 description = "SIC. Llançament del SIC 2.0"
-sections    = ["Notícies"]
+sections    = ["Notícies", "home"]
 categories  = ["sic"]
+key         = "JUNY2017"
 +++
 
 ## SIC 2.0
