--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -1,7 +1,7 @@
 +++
 date        = "2017-06-07"
 title       = "SIC. Llançament del SIC 2.0"
-description = "SIC. Llançament del SIC 2.0"
+description = "El passat 31 de Maig es va realitzar la presentació oficial del SIC 2.0. Presentem un resum amb les característiques més importants."
 sections    = ["Notícies", "home"]
 categories  = ["sic"]
 key         = "JUNY2017"
@@ -47,6 +47,8 @@ No es permet la inclusió d'arxius binaris al GitLab. En el cas que s'hagi d'emm
 * Per a d'altres binaris:
 	* Fins al 26 de Juny, s'haurà de seguir utilitzant el SVN per a la pujada de binaris.
 	* A partir del 26 de Juny, s'haurà d'utilitzar el nou mòdul de Gestió de Binaris, que estarà disponible a través de l'URL: [`https://bin.sic.intranet.gencat.cat`](https://bin.sic.intranet.gencat.cat).
+
+<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1OTb_56tC81h5WUsq_KMVHfdoFUjrgd4HSETtbV-HAiY&font=OpenSans-GentiumBook&lang=ca&timenav_position=top&initial_zoom=1&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 
 ## Informació disponible
 
