--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -37,9 +37,7 @@ Tot nou codi d'aplicació es crearà al GitLab i no al SVN.
 
 ### Migració de repositoris
 
-Donades les diferents característiques de cadascun dels proyectes i de cadascun dels proveïdors de lot d'aplicacions, la migració de repositoris corre a càrrec dels proveïdors de lot d'aplicacions.
-
-Es recomana als proveïdors d'aplicacions que encara treballin amb SVN que migrin a GIT els seus entorns locals, ja que el mètode recomanat per a les migracions és afegir en l'entorn de desenvolupament el nou *remote* corresponent al GitLab del SIC i fer push a aquest remote cada cop que es vulgui generar una versió entregable al SIC. D'aquesta manera, a més de facilitar-se molt la migració de les seves aplicacions, els proveïdors d'aplicacions estaran alineats tecnològicament amb el SIC.
+Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT, ja que el mètode recomanat per a les migracions de repositoris és afegir en l'entorn de desenvolupament el nou *remote* corresponent al GitLab del SIC i fer push a aquest remote cada cop que es vulgui generar una versió entregable al SIC. D'aquesta manera, a més de facilitar-se molt la migració de les seves aplicacions, els proveïdors d'aplicacions estaran alineats tecnològicament amb el SIC i podran beneficiar-se dels múltiples avantatges de disposar de GIT en comparació amb SVN.
 
 No es permet la inclusió d'arxius binaris al GitLab. En el cas que s'hagi d'emmagatzemar binaris, el SIC ofereix les següents alternatives:
 
@@ -48,7 +46,18 @@ No es permet la inclusió d'arxius binaris al GitLab. En el cas que s'hagi d'emm
 	* Fins al 26 de Juny, s'haurà de seguir utilitzant el SVN per a la pujada de binaris.
 	* A partir del 26 de Juny, s'haurà d'utilitzar el nou mòdul de Gestió de Binaris, que estarà disponible a través de l'URL: [`https://bin.sic.intranet.gencat.cat`](https://bin.sic.intranet.gencat.cat).
 
+Us facilitem un calendari amb les properes accions que es realitzaran al SIC:
+
 <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1OTb_56tC81h5WUsq_KMVHfdoFUjrgd4HSETtbV-HAiY&font=OpenSans-GentiumBook&lang=ca&timenav_position=top&initial_zoom=1&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+
+## Beneficis del SIC 2.0
+
+Els beneficis aportats per aquests canvis són entre d'altres:
+
+* Autosuficiència en la gestió d'usuaris i en la gestió de repositoris per part dels lots d'aplicacions.
+* Reducció de tràmits administratius que no aporten valor ni a CTTI ni als proveïdors.
+* Més control del temps de cicle (interval de temps entre que es puja una funcionalitat nova al SCM i aquesta arriba a Producció).
+* Extensibilitat: S'han assentat els fonaments que permetran afegir futures millores al SIC d'una forma més senzilla.
 
 ## Informació disponible
 
