--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -37,14 +37,15 @@ Tot nou codi d'aplicació es crearà al GitLab i no al SVN.
 
 ### Migració de repositoris
 
-Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT, ja que el mètode recomanat per a les migracions de repositoris és afegir en l'entorn de desenvolupament el nou *remote* corresponent al GitLab del SIC i fer push a aquest remote cada cop que es vulgui generar una versió entregable al SIC. D'aquesta manera, a més de facilitar-se molt la migració de les seves aplicacions, els proveïdors d'aplicacions estaran alineats tecnològicament amb el SIC i podran beneficiar-se dels múltiples avantatges de disposar de GIT en comparació amb SVN.
+Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT. D'aquesta manera, tindran els entorns aliniats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. 
 
-No es permet la inclusió d'arxius binaris al GitLab. En el cas que s'hagi d'emmagatzemar binaris, el SIC ofereix les següents alternatives:
+S'ha de tenir en compte que no es permetrà la inclusió d'arxius binaris al GitLab. Si és imprescindible l'emmagatzemament de binaris, el SIC ofereix les següents alternatives:
 
 * Per a llibreries: Utilitzar el Nexus del SIC.
 * Per a d'altres binaris:
 	* Fins al 26 de Juny, s'haurà de seguir utilitzant el SVN per a la pujada de binaris.
 	* A partir del 26 de Juny, s'haurà d'utilitzar el nou mòdul de Gestió de Binaris, que estarà disponible a través de l'URL: [`https://bin.sic.intranet.gencat.cat`](https://bin.sic.intranet.gencat.cat).
+
 
 Us facilitem un calendari amb les properes accions que es realitzaran al SIC:
 
