[skip CI] Edició de la noticia -1

--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -11,33 +11,32 @@ key         = "JUNY2017"
 
 El passat 31 de Maig es va realitzar la presentació oficial del SIC 2.0. Com ja s'ha comentat en altres comunicats, aquesta nova versió del SIC incorpora:
 
-* Un autoservei d'usuaris, mitjançant el qual, els usuaris estan precarregats (només es requereix fer un login previ a GitLab) i s'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
+* Un autoservei d'usuaris amb el que els release managers són autosuficients per a assignar els usuaris que necessitin als seus projectes i aplicacions. Els usuaris estan precarregats des de GICAR (només es requereix fer un login previ a GitLab) i s'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
 	* Per a Release Managers i administradors de CPD/Lloc de Treball, els privilegis s'assignen de forma automàtica.
 	* Per a la resta d'usuaris de Lot, els Release Managers gestionen els seus privilegis.
 * Un autoservei de repositoris, mitjançant el qual, els Release Managers poden crear-los i concedir permisos d'accés a aquests a d'altres usuaris.
-* Millora tecnològica:
-	* Jobs de tipus Pipeline, que permeten extensibilitat i futures millores al SIC.
-	* GIT com a nou SCM, que és de naturalesa distribuïda i que permet una millor gestió de branques, entre d'altres característiques.
+* S'adopta de forma general els jobs de construcció i desplegament de tipus Pipeline, que permeten extensibilitat i futures millores al SIC.
+* Git com a nou SCM, que és de naturalesa distribuïda i que permet una millor gestió de branques, i un entorn de treball més usable i modern.
 * Solució als problemes d'espai deguts a l'emmagatzemament de binaris, mitjançant el nou sistema de Gestió de Binaris.
 
 Aquestes noves funcionalitats s'han adquirit gràcies a la implantació dels següents sistemes:
 
 * Integració amb GICAR
-* GitLab
-* Versió 2+ de Jenkins
-* Implantació del mòdul de Gestió de Binaris (previst per al proper 26 de Juny)
+* GitLab 9.x
+* Jenkins 2.x
+* Nou mòdul de Gestió de Binaris. 
 
 Podeu descarregar-vos la presentació fent clic a [aquest enllaç](/related/sic/2.0/SIC-2.0.pdf).
 
-## Període de convivència SIC 1.0 i SIC 2.0
+## Període de convivència entre Subversion i Gitlab
 
-Com bé sabeu, s'ha establert un període de convivència de SIC 1.0 i SIC 2.0. Us recordem que per accedir a qualsevol sistema del SIC **caldrà utilitzar els credencials de GICAR** a excepció del SVN, al que seguirà accedint amb els credencials antics.
+S'ha establert un període de convivència entre Subversion i Gitlab que permetrà el traspàs progressiu de repositoris d'un sistema a l'altre. En aquest periode, es mantindran les credencials antigues únicament per accedir a Subversion. Per als altres components de SIC **caldrà utilitzar les credencials de GICAR**.
 
-Tot nou codi d'aplicació es crearà al GitLab i no al SVN.
+Es deixaran de crear usuaris i repositoris al sistema antic. Tot nou codi d'aplicació es crearà al GitLab i no al SVN.
 
 ### Migració de repositoris
 
-Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT. D'aquesta manera, tindran els entorns aliniats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. 
+Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT. D'aquesta manera, tindran els entorns alineats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. 
 
 S'ha de tenir en compte que no es permetrà la inclusió d'arxius binaris al GitLab. Si és imprescindible l'emmagatzemament de binaris, el SIC ofereix les següents alternatives:
 
