--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -11,7 +11,7 @@ key         = "JUNY2017"
 
 El passat 31 de Maig es va realitzar la presentació oficial del SIC 2.0. Com ja s'ha comentat en altres comunicats, aquesta nova versió del SIC incorpora:
 
-* Un autoservei d'usuaris amb el que els release managers són autosuficients per a assignar els usuaris que necessitin als seus projectes i aplicacions. Els usuaris estan precarregats des de GICAR (només es requereix fer un login previ a GitLab) i s'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
+* Un autoservei d'usuaris amb el que els release managers són autosuficients per a assignar els usuaris que necessitin als seus projectes i aplicacions. Els usuaris estan precarregats des de GICAR. Només es requereix fer un login previ a GitLab per a que siguin visibles des de l'aplicació. S'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
 	* Per a Release Managers i administradors de CPD/Lloc de Treball, els privilegis s'assignen de forma automàtica.
 	* Per a la resta d'usuaris de Lot, els Release Managers gestionen els seus privilegis.
 * Un autoservei de repositoris, mitjançant el qual, els Release Managers poden crear-los i concedir permisos d'accés a aquests a d'altres usuaris.
@@ -32,18 +32,23 @@ Podeu descarregar-vos la presentació fent clic a [aquest enllaç](/related/sic/
 
 S'ha establert un període de convivència entre Subversion i Gitlab que permetrà el traspàs progressiu de repositoris d'un sistema a l'altre. En aquest periode, es mantindran les credencials antigues únicament per accedir a Subversion. Per als altres components de SIC **caldrà utilitzar les credencials de GICAR**.
 
-Es deixaran de crear usuaris i repositoris al sistema antic. Tot nou codi d'aplicació es crearà al GitLab i no al SVN.
+La gestió d'usuaris es farà integrament amb les eines de Gicar i de Gitlab. Les identitats antigues es mantindran per permetre la convivència.
+
+Els repositoris nous es crearan a Gitlab. Els repositoris subversion seguiran estan actius fins a que els responsables de l'aplicació hagin notificat la migració a gitlab o fins a la data de fi de disponibilitat de subversion, el 6 de novembre de 2017.
 
 ### Migració de repositoris
 
-Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Es recomana que els entorns de desenvolupament locals que encara treballin amb SVN migrin a GIT. D'aquesta manera, tindran els entorns alineats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. 
+Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Una migració entre el subversion de SIC i el nou Git de SIC2.0 pot ser una tasca feixuga per la quantitat de versions històriques que manté el repositori actual, i per tant molt sensible a errors i repeticions de la migració. Per facilitar aquesta migració, es recomana pujar la versió actual directament des dels entorns de desenvolupament locals GIT. D'aquesta manera, tindran els entorns alineats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. En cas de nodisposar d'un entorn git local, es recomana crear-ne un i volcar-hi la darrera versió de l'aplicació al subversion local disponible i fer un push al nou git. 
 
-S'ha de tenir en compte que no es permetrà la inclusió d'arxius binaris al GitLab. Si és imprescindible l'emmagatzemament de binaris, el SIC ofereix les següents alternatives:
+## Nova gestió de binaris
 
-* Per a llibreries: Utilitzar el Nexus del SIC.
+Per a evitar els problemes d'espai que generen els binaris en un SCM com git o subversion, no es permetrà la inclusió d'arxius binaris al GitLab. Si és imprescindible l'emmagatzemament de binaris, el SIC ofereix les següents alternatives:
+
+* Per a llibreries: Utilitzar el repositori Nexus del SIC.
 * Per a d'altres binaris:
 	* Fins al 26 de Juny, s'haurà de seguir utilitzant el SVN per a la pujada de binaris.
 	* A partir del 26 de Juny, s'haurà d'utilitzar el nou mòdul de Gestió de Binaris, que estarà disponible a través de l'URL: [`https://bin.sic.intranet.gencat.cat`](https://bin.sic.intranet.gencat.cat).
+    * L'accés al SVN per a binaris es restringirà el 10/7 definitivament
 
 
 Us facilitem un calendari amb les properes accions que es realitzaran al SIC:
@@ -52,15 +57,15 @@ Us facilitem un calendari amb les properes accions que es realitzaran al SIC:
 
 ## Beneficis del SIC 2.0
 
-Els beneficis aportats per aquests canvis són entre d'altres:
+Els beneficis aportats per aquests canvis són:
 
-* Autosuficiència en la gestió d'usuaris i en la gestió de repositoris per part dels lots d'aplicacions.
-* Reducció de tràmits administratius que no aporten valor ni a CTTI ni als proveïdors.
-* Més control del temps de cicle (interval de temps entre que es puja una funcionalitat nova al SCM i aquesta arriba a Producció).
-* Extensibilitat: S'han assentat els fonaments que permetran afegir futures millores al SIC d'una forma més senzilla.
+* Autoservei en la gestió d'usuaris i en la gestió de repositoris per part dels lots d'aplicacions.
+* Reducció a la mínima expressió dels tràmits administratius per a que un usuari pugui fer servir un repositori o crear-ne un de nou.
+* Reducció del temps de cicle (interval de temps entre que es puja una funcionalitat nova al SCM i aquesta arriba a Producció).
+* Extensibilitat: S'han assentat els fonaments que permetran afegir futures millores al SIC d'una forma més àgil.
 
 ## Informació disponible
 
-Aquestes són les característiques més importants que cal tenir en compte amb el SIC 2.0. Per a més informació, podeu consultar el [FAQ del SIC](/sic/faq/) i/o els [Manuals del SIC](/sic-documentacio/manuals/).
+Per a més informació, podeu consultar el [FAQ del SIC](/sic/faq/) i amb més detall als [Manuals del SIC](/sic-documentacio/manuals/).
 
 En cas de tenir qualsevol dubte, ens podeu enviar una consulta a través de SAU-Remedy (servei Framework SIC) o al correu: `oficina-tecnica.canigo.ctti@gencat.cat`.
