Correcció 10/7 surt com una fracció

--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -48,7 +48,7 @@ Per a evitar els problemes d'espai que generen els binaris en un SCM com git o s
 * Per a d'altres binaris:
 	* Fins al 26 de Juny, s'haurà de seguir utilitzant el SVN per a la pujada de binaris.
 	* A partir del 26 de Juny, s'haurà d'utilitzar el nou mòdul de Gestió de Binaris, que estarà disponible a través de l'URL: [`https://bin.sic.intranet.gencat.cat`](https://bin.sic.intranet.gencat.cat).
-    * L'accés al SVN per a binaris es restringirà el 10/7 definitivament
+    * L'accés al SVN per a binaris es restringirà el 10 de juliol definitivament
 
 
 Us facilitem un calendari amb les properes accions que es realitzaran al SIC:
