--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -24,7 +24,7 @@ Aquestes noves funcionalitats s'han adquirit gràcies a la implantació dels seg
 * Integració amb GICAR
 * GitLab 9.x
 * Jenkins 2.x
-* Nou mòdul de Gestió de Binaris. 
+* Nou mòdul de Gestió de Binaris
 
 Podeu descarregar-vos la presentació fent clic a [aquest enllaç](/related/sic/2.0/SIC-2.0.pdf).
 
@@ -38,7 +38,7 @@ Els repositoris nous es crearan a Gitlab. Els repositoris subversion seguiran es
 
 ### Migració de repositoris
 
-Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Una migració entre el subversion de SIC i el nou Git de SIC2.0 pot ser una tasca feixuga per la quantitat de versions històriques que manté el repositori actual, i per tant molt sensible a errors i repeticions de la migració. Per facilitar aquesta migració, es recomana pujar la versió actual directament des dels entorns de desenvolupament locals GIT. D'aquesta manera, tindran els entorns alineats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. En cas de nodisposar d'un entorn git local, es recomana crear-ne un i volcar-hi la darrera versió de l'aplicació al subversion local disponible i fer un push al nou git. 
+Cada proveïdor d'aplicacions és autònom per migrar les seves aplicacions de SVN a GIT. Una migració entre el subversion de SIC i el nou Git de SIC2.0 pot ser una tasca feixuga per la quantitat de versions històriques que manté el repositori actual, i per tant molt sensible a errors i repeticions de la migració. Per facilitar aquesta migració, es recomana pujar la versió actual directament des dels entorns de desenvolupament locals GIT. D'aquesta manera, tindran els entorns alineats tecnològicament amb el SIC i podran fer servir les funcionalitats proporcionades per Git a l'hora de treballar amb més d'un repositori. En especial, es podrà afegir el nou *remote* corresponent al GitLab del SIC, el que permetrà fer *push* a aquest *remote* cada vegada que es vulgui generar una versió entregable al SIC. En cas de no disposar d'un entorn git local, es recomana crear-ne un i volcar-hi la darrera versió de l'aplicació al subversion local disponible i fer un push al nou git.
 
 ## Nova gestió de binaris
 
