--- a/content/noticies/2017-06-07-SIC-SIC_2.0.md
+++ b/content/noticies/2017-06-07-SIC-SIC_2.0.md
@@ -11,7 +11,7 @@ key         = "JUNY2017"
 
 El passat 31 de Maig es va realitzar la presentació oficial del SIC 2.0. Com ja s'ha comentat en altres comunicats, aquesta nova versió del SIC incorpora:
 
-* Un autoservei d'usuaris amb el que els release managers són autosuficients per a assignar els usuaris que necessitin als seus projectes i aplicacions. Els usuaris estan precarregats des de GICAR. Només es requereix fer un login previ a GitLab per a que siguin visibles des de l'aplicació. S'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
+* Un autoservei d'usuaris amb el que els release managers són autosuficients per a assignar els usuaris que necessitin als seus projectes i aplicacions. Els usuaris estan precarregats des de GICAR. Només es requereix fer un login previ a [GitLab] (https://git.intranet.gencat.cat/users/sign_in) per a que siguin visibles des de l'aplicació. S'ha establert un sistema d'assignació de privilegis que funciona de la següent manera:
 	* Per a Release Managers i administradors de CPD/Lloc de Treball, els privilegis s'assignen de forma automàtica.
 	* Per a la resta d'usuaris de Lot, els Release Managers gestionen els seus privilegis.
 * Un autoservei de repositoris, mitjançant el qual, els Release Managers poden crear-los i concedir permisos d'accés a aquests a d'altres usuaris.
