--- a/content/destacats/2017-06-26-canigo3_2_1.md
+++ b/content/destacats/2017-06-26-canigo3_2_1.md
@@ -1,7 +1,7 @@
 +++
 date        = "2017-06-26"
-title       = "Publicació de Canigó 3.2.1"
-description = "S'ha publicat la versió 3.2.1 del Framework Canigó"
+title       = "Publicació Canigó 3.2.1"
+description = "S'ha publicat la versió 3.2.1 del framework Canigó amb algunes millores i resolució d'incidències"
 enllac      = "https://cstd.ctti.gencat.cat/jiracstd/browse/CAN/fixforversion/10461"
 sections    = "canigo"
 key         = "JULIOL2017"
