[skip ci] Revisió descripció gràfica

--- a/content/comunicat/2017/07.md
+++ b/content/comunicat/2017/07.md
@@ -7,13 +7,13 @@ key 		  	= "JULIOL2017"
 
 [grafica]
 titol      = "SGDE. Consum del servei STD per àmbit"
-descripcio = "La següent gràfica mostra el consum del servei STD per àmbit, destacant eCopia (Còpia autèntica) de la DGPAE com a principal consumidor, així com el Servei Català de Trànsit com a nou consumidor des del passat mes de Juny"
+descripcio = "La següent gràfica mostra el consum del servei STD per àmbit, destacant eCopia (Còpia autèntica) com a principal consumidor, així com el Servei Català de Trànsit com a nou consumidor des del passat mes de Juny"
 imatge     = "std_consum_per_ambit.png"
 alt        = "Consum per àmbit del servei STD"
 
 [[relacionats]]
-doctitle          = "Migració de repositoris SVN a Git"
-docdescription    = "En aquest HowTo es donen pautes de com fer la migració de repositoris SVN a Git"
+doctitle          = "Migració de repositoris SVN a Git al SIC"
+docdescription    = "En aquest HowTo es donen pautes de com fer la migració de repositoris SVN a Git al SIC"
 docurl            = "/howtos/2017-07-Howto-Howto-Migrar%20repositori%20SVN%20a%20repositori%20GIT/"
 doctype           = "HTML"
 
