--- a/content/comunicat/2017/08.md
+++ b/content/comunicat/2017/08.md
@@ -14,7 +14,7 @@ alt        = "Consum servei invocació d'eFormularis"
 [[relacionats]]
 doctitle          = "Actualització aplicació de Canigó 3.1 a Canigó 3.2"
 docdescription    = "En aquest HowTo s'explica quins canvis cal realitzar en una aplicació Canigó 3.1 per migrar a Canigó 3.2"
-docurl            = "/howtos/2017-08-Howto-Actualitzacio_Canigo3_1_Canigo3_2/
+docurl            = "/howtos/2017-08-Howto-Actualitzacio_Canigo3_1_Canigo3_2/"
 doctype           = "HTML"
 
 +++
