Notícia sobre Nexus3. Correcció imatge.

--- a/content/noticies/2017-09-08-SIC-Nexus3.md
+++ b/content/noticies/2017-09-08-SIC-Nexus3.md
@@ -7,7 +7,7 @@ categories  = ["sic"]
 key         = "SETEMBRE2017"
 +++
 
-# Actualització del Nexus del SIC
+## Actualització del Nexus del SIC
 
 S'ha actualitzat la versió del repositori de dependències del SIC (Nexus) a la versió 3.2.1. Aquest increment de versió respon a la necessitat per part del SIC per gestionar i emmagatzemar nous tipus de dependències. Els tipus de repositoris que suporta el Nexus 3.2.1 són:
 
@@ -22,7 +22,7 @@ S'ha actualitzat la versió del repositori de dependències del SIC (Nexus) a la
 
 D'aquesta manera s'amplia el nombre de tecnologies que són integrables al SIC.
 
-## Canvis respecte a la versió anterior
+### Canvis respecte a la versió anterior
 
 Les implicacions d'utilitzar aquesta nova versió per al SIC són:
 
