--- a/content/comunicat/2017/09.md
+++ b/content/comunicat/2017/09.md
@@ -6,10 +6,10 @@ nombredestacats = 2
 key 		  	    = "SETEMBRE2017"
 
 [grafica]
-titol      = "SGDE. Evolució peticions al servei d'eFormularis"
-descripcio = "La següent gràfica mostra el consum del servei d'invocació (webservice) d'eFormularis per mes des de Gener 2016"
-imatge     = "eformularis_evolucio_consum.png"
-alt        = "Consum servei invocació d'eFormularis"
+titol      = "SGDE. Evolució del número de peticions al servei STD"
+descripcio = "La següent gràfica mostra el consum del servei STD"
+imatge     = "std_evolucio_consum.png"
+alt        = "Evolució del número de peticions al servei STD."
 
 [[relacionats]]
 doctitle          = "Actualització aplicació de Canigó 3.1 a Canigó 3.2"
